--- a/monetisation.html
+++ b/monetisation.html
@@ -445,6 +445,11 @@
                     <p class="revenue-text">
                         Access to product reports, suitability assessments, and buying recommendations. Designed for personal purchase decisions.
                     </p>
+                    <p class="revenue-text" style="margin-top: 16px; font-weight: 600; color: var(--text-primary);">Value anchor:</p>
+                    <ul class="bullet-list" style="margin-top: 8px;">
+                        <li>Avoid wrong purchases</li>
+                        <li>Save research time</li>
+                    </ul>
                 </div>
 
                 <div class="revenue-card">
@@ -453,6 +458,12 @@
                     <p class="revenue-text">
                         Structured evaluation tools, procurement support, risk assessments, and team access. For operational and purchasing decisions. Includes export and audit features.
                     </p>
+                    <p class="revenue-text" style="margin-top: 16px; font-weight: 600; color: var(--text-primary);">Value anchor:</p>
+                    <ul class="bullet-list" style="margin-top: 8px;">
+                        <li>Reduce procurement risk</li>
+                        <li>Improve audit trail</li>
+                        <li>Save staff time</li>
+                    </ul>
                 </div>
 
                 <div class="revenue-card">
@@ -461,7 +472,25 @@
                     <p class="revenue-text">
                         Product viability analysis, variant insights, description generation, and sourcing links. For e-commerce and retail sellers making stocking decisions.
                     </p>
+                    <p class="revenue-text" style="margin-top: 16px; font-weight: 600; color: var(--text-primary);">Value anchor:</p>
+                    <ul class="bullet-list" style="margin-top: 8px;">
+                        <li>Reduce failed listings</li>
+                        <li>Improve margins</li>
+                        <li>Better descriptions</li>
+                    </ul>
                 </div>
+            </section>
+
+            <!-- Pricing Validation -->
+            <section class="section">
+                <h2 class="section-title">Pricing Validation Approach</h2>
+                <p class="section-text">
+                    These pricing ranges are indicative and will be refined based on market feedback:
+                </p>
+                <ul class="bullet-list">
+                    <li>We will test willingness to pay via pilot follow-ups</li>
+                    <li>Pricing will be refined based on conversion + retention signals</li>
+                </ul>
             </section>
 
             <!-- Additional Revenue Streams -->
