--- a/use-cases.html
+++ b/use-cases.html
@@ -513,7 +513,7 @@
                     <li>Access sourcing and buying links</li>
                 </ul>
                 <div class="use-case-outcome">
-                    <p>Sellers choose better products, reduce mistakes, and build trust with customers.</p>
+                    <p>Sellers choose better products, reduce mistakes, and build trust with buyers.</p>
                 </div>
             </div>
         </div>
