--- a/why-not-ai.html
+++ b/why-not-ai.html
@@ -405,6 +405,14 @@
     <main class="content">
         <div class="container">
 
+            <!-- Core Principle -->
+            <section class="section">
+                <h2 class="section-title">Core principle: structure before automation</h2>
+                <p class="section-text">
+                    The innovation is the repeatable framework. Automation will be added only to scale delivery.
+                </p>
+            </section>
+
             <!-- The Problem with Existing Tools -->
             <section class="section">
                 <h2 class="section-title">The Problem with Existing Tools</h2>
@@ -526,6 +534,19 @@
                     <h4>Why This Matters</h4>
                     <p>In a world of information overload and AI-generated noise, structured decision frameworks become more valuable, not less. Product Intelligence provides the consistency and transparency that existing tools lack — enabling better decisions at scale.</p>
                 </div>
+            </section>
+
+            <!-- How We Reduce AI Risk -->
+            <section class="section">
+                <h2 class="section-title">How we reduce AI risk (future)</h2>
+                <p class="section-text">
+                    When automation is introduced, the framework will maintain its structured, auditable nature through:
+                </p>
+                <ul class="bullet-list">
+                    <li><strong>Evidence-first outputs with sources</strong> — All claims will be backed by cited sources, enabling verification and fact-checking.</li>
+                    <li><strong>Deterministic template + fixed sections</strong> — The 9-section framework remains fixed, ensuring consistent structure regardless of automation method.</li>
+                    <li><strong>Human review and audit trail for business decisions</strong> — Critical evaluations will include human oversight, with full audit trails showing how conclusions were reached.</li>
+                </ul>
             </section>
 
             <!-- Future Direction -->
