fix: remove placeholders and repair broken media

--- a/index.html
+++ b/index.html
@@ -1521,19 +1521,19 @@
             <p class="overview-intro">A quick visual view of how Product Intelligence works.</p>
             <div class="overview-grid">
                 <div class="overview-card">
-                    <img src="assets/media/overview-steps.png" alt="The 3-step flow showing how Product Intelligence works" onerror="this.onerror=null;this.src='assets/media/placeholder-diagram.svg';">
+                    <img src="assets/overview-steps.svg" alt="The 3-step flow showing how Product Intelligence works" onerror="this.onerror=null;this.style.display='none';">
                     <div class="overview-caption">
                         <h3>The 3-step flow</h3>
                     </div>
                 </div>
                 <div class="overview-card">
-                    <img src="assets/media/overview-report.png" alt="Example output report from Product Intelligence" onerror="this.onerror=null;this.src='assets/media/placeholder-diagram.svg';">
+                    <img src="assets/overview-report.svg" alt="Example output report from Product Intelligence" onerror="this.onerror=null;this.style.display='none';">
                     <div class="overview-caption">
                         <h3>Example output report</h3>
                     </div>
                 </div>
                 <div class="overview-card">
-                    <img src="assets/media/overview-users.png" alt="Who it's for - Individuals, SMEs, and Sellers" onerror="this.onerror=null;this.src='assets/media/placeholder-diagram.svg';">
+                    <img src="assets/overview-users.svg" alt="Who it's for - Individuals, SMEs, and Sellers" onerror="this.onerror=null;this.style.display='none';">
                     <div class="overview-caption">
                         <h3>Who it's for (Individuals, SMEs, Sellers)</h3>
                     </div>
